# prometheus-forge

./: .gitignore  .pre-commit-config.yaml  PROMETHEUS_BLUEPRINT_V2.md  PROMETHEUS_ROADMAP.md  README.md  SECURITY.md
backend/: .dockerignore  Dockerfile  __init__.py  config.py  errors.py  logging.json  logging_setup.py  main.py  pyproject.toml  requirements.txt
backend/agents/: _summarize.py  articulation_agent.py  brand_identity_agent.py  business_model_agent.py  competitive_analysis_agent.py  executive_summary_agent.py  financial_model_agent.py  gates.py  go_to_market_agent.py  idea_parser_agent.py  landing_page_agent.py  legal_documents_agent.py  market_research_agent.py  orchestrator.py  pitch_deck_agent.py  risk_analysis_agent.py  tech_architecture_agent.py
backend/api/: __init__.py  _dependencies.py  routes_auth.py  routes_billing.py  routes_deploy.py  routes_export.py  routes_finance.py  routes_generate.py  routes_internal.py  routes_marketplace.py  routes_session.py  routes_share.py  routes_speech.py  routes_user.py  sse.py
backend/middleware/: __init__.py  auth.py  cost_guard.py  idempotency.py  input_sanitization.py  observability.py  rate_limit.py
backend/models/: request_models.py
backend/prompts/: articulation.txt  brand_identity.txt  brand_identity_alternatives.txt  business_model.txt  competitive_analysis.txt  executive_summary.txt  financial_model.txt  go_to_market.txt  idea_parser.txt  landing_page.txt  legal_documents.txt  market_research.txt  pitch_deck.txt  risk_analysis.txt  summarize_for_deck.txt  tech_architecture.txt
backend/services/: __init__.py  (+36 more)
(+352 files in other folders)
